Completely fix the word-wrapping on mobile

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -17,6 +17,7 @@ width: 200px;
 
 .word-wrap {
 word-wrap: break-word;
+overflow: hidden;
 }
 
 #hidden {
